--- a/bylaws.tex
+++ b/bylaws.tex
@@ -511,25 +511,27 @@ engineering designs, and analysis pipelines. All Collaboration members agree to 
 \subsection{Organization}
 The execution of the policy shall be overseen by the Publication and Speakers Council and its sub-committees (\S\ref{sec:pubcouncil}). The Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Council will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
 
-The execution of the policy shall be overseen by a Publication and Speakers Council chaired by an elected representative from the Executive Team.  There are two sub-committees: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The Collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Board will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
+The execution of the policy shall be overseen by a Publication and Speakers Committee.  There are two sub-committees: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The Collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
 
 \subsection{Project Proposal Process}
 
 %\Comment{[Ed. note: The entire concept of ``Key Science'' papers is up for discussion, but only bits are highlighted below to avoid making the whole paragraph red.  Such a concept (under various names) is employed is many collaborations.  At the very end, we place possible suggestions for ``Key" topics.]}
 
-Any Collaboration member may propose a Collaboration research project to an appropriate Science or Technical Working Group.  Such a project is work that is intended to result in a journal publication after a fixed term, or a small set of related publications.  There are three categories for projects:
+Any Collaboration member may propose a Collaboration research project to an appropriate Analysis or Technical Working Group.  Such a project is work that is intended to result in a journal publication after a fixed term, or a small set of related publications.  There are three categories for projects:
 \begin{enumerate}
   \item Projects that are designated as ``Key Projects'' represent the main science goals of the Collaboration (or forecasts for what we will achieve), where the Collaboration must speak with a single voice.  
-\item ``Standard'' analysis projects represent other science goals and use Collaboration science data.  
+\item ``Non-key'' analysis projects represent other science goals and use Collaboration science data.  
 \item Other forecasts and technical reports are Collaboration-vetted projects that do not require Collaboration science data and may lead to a publication or conference proceeding.  
 \end{enumerate}
 The Science Council will maintain the list of Key Science topics, to be established prior to any projects being initiated.  Topics can be added to the Key Science paper list and reviewed in coordination with the Publication Board.
 
 The Publication Board will establish the template for project submission.  The project proposal document will designate a project leader and team, and describe the project, its estimated completion date, and final products.  Work on Collaboration data should apply toward a Collaboration project: failure to submit a project at its initiation, or writing a paper on internal Collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.
 
-After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group Coordinators will submit the project to the Science Council with a project category recommendation as a Key project, standard project, or theory forecast / technical report.  At this time the working group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap between projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, Project Leaders, and Spokesperson(s).  Teams should welcome to join any colleagues that wish to make a defined and useful contribution to the project.
+After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group coordinators will submit the project to the Science Council with a project category recommendation as a Key project, non-key project, or theory forecast / technical report.  At this time the working group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap among projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, publication-project leaders, and Spokespersons.  Any Collaboration Members that wish to make a defined and useful contribution to the project are welcome to join the team.  Disputes will be settled by the Working Group coordinators and Spokespersons as needed.  
 
-The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the Collaboration spokesperson  will cast the deciding vote.  When approved, the Publication Board will record the proposal in its project database.  Once recorded, the Collaboration may not re-classify a standard project as key without the written agreement of all named project team members.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for Collaboration review.
+The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the project is sent back.  When approved, the Publication Board will record the proposal in its project database, including its project category.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for Collaboration review. In rare cases, the scope of the project could change considerably during the analysis (for example, if an unexpected detection is made in work primarily aimed at setting limits).  In such rare instances, the  project must be reviewed again to determine its status as Key or non-key. 
+Otherwise, once recorded, the Collaboration may not re-classify a non-key project as key without the written agreement of all named project team members.  
+
 
 Projects led by thesis students will be given special consideration to protect them from competition within the Collaboration.  Projects that require joint work with an external collaboration will require a memorandum of understanding set up by the External Collaborators Committee that specifies authorship and publication policies for that work.  These should be as compatible as possible with the respective Collaboration policies.  Projects may add individual external collaborators to the team provided that no unreleased data is provided to them.
 
