more fixes to pubs

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -506,12 +506,13 @@ The membership status of each member will be reviewed by the Membership Council 
 This policy seeks to ensure an equitable distribution of credit for work in the CMB-S4 Collaboration, to encourage and incentivize active work by Collaboration members, and to ensure the resulting publications are of high quality. The authorship policy of the American Physical Society (2002) states: \textit{``Authorship should be limited to those who have made a significant contribution to the concept, design, execution or interpretation of the research study. All those who have made significant contributions should be offered the opportunity to be listed as authors.''}\footnote{\url{https://www.aps.org/policy/statements/02_2.cfm}}
 
 The Publication Policy will apply to all projects and publications that employ Collaboration resources, including unreleased data, simulation codes and products, hardware and software
-engineering designs, and analysis pipelines. All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
+engineering designs, and analysis pipelines. All Collaboration members agree to the publication policy upon joining, and to be bound by it for two years after leaving the Collaboration.
+%All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
 
 \subsection{Organization}
 The execution of the policy shall be overseen by the Publication and Speakers Council and its sub-committees (\S\ref{sec:pubcouncil}). The Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Council will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
 
-The execution of the policy shall be overseen by a Publication and Speakers Committee.  There are two sub-committees: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The Collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
+%The execution of the policy shall be overseen by a Publication and Speakers Committee.  There are two sub-committees: the Publications Board with eight Collaboration members and the Speakers Bureau with four Collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The Collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Committee will keep track of active Collaboration members and legacy member for the purposes of establishing author lists for papers.
 
 \subsection{Project Proposal Process}
 
@@ -525,22 +526,25 @@ Any Collaboration member may propose a Collaboration research project to an appr
 \end{enumerate}
 The Science Council will maintain the list of Key Science topics, to be established prior to any projects being initiated.  Topics can be added to the Key Science paper list and reviewed in coordination with the Publication Board.
 
-The Publication Board will establish the template for project submission.  The project proposal document will designate a project leader and team, and describe the project, its estimated completion date, and final products.  Work on Collaboration data should apply toward a Collaboration project: failure to submit a project at its initiation, or writing a paper on internal Collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.
+The Publication Board will establish the template for project submission.  The project proposal document will designate a project leader and team, and describe the project, its estimated completion date, and final products.  
+Projects led by thesis students will be given special consideration to protect them from competition within the Collaboration.  Projects that require joint work with an external collaboration will require a memorandum of understanding set up by the External Collaborators Committee that specifies authorship and publication policies for that work.  These should be as compatible as possible with the respective Collaboration policies.  Provisional Members and individual external collaborators may be suggested as team members.  The External Collaborators Committee must be consulted in the latter case, to determine if MOUs are required.  
+
+
+Work on Collaboration data should apply toward a Collaboration project: failure to submit a project at its initiation, or writing a paper on internal Collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.
 
 After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group coordinators will submit the project to the Science Council with a project category recommendation as a Key project, non-key project, or theory forecast / technical report.  At this time the working group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap among projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, publication-project leaders, and Spokespersons.  Any Collaboration Members that wish to make a defined and useful contribution to the project are welcome to join the team.  Disputes will be settled by the Working Group coordinators and Spokespersons as needed.  
 
-The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the project is sent back.  When approved, the Publication Board will record the proposal in its project database, including its project category.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for Collaboration review. In rare cases, the scope of the project could change considerably during the analysis (for example, if an unexpected detection is made in work primarily aimed at setting limits).  In such rare instances, the  project must be reviewed again to determine its status as Key or non-key. 
-Otherwise, once recorded, the Collaboration may not re-classify a non-key project as key without the written agreement of all named project team members.  
+The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the project is sent back.  When approved, the Publication Board will record the proposal in its project database, including its project category.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for Collaboration review.  After the definition of a project, it can be reclassified only by unanimous written agreement of the project team or by a supermajority vote of the GB.
 
-
-Projects led by thesis students will be given special consideration to protect them from competition within the Collaboration.  Projects that require joint work with an external collaboration will require a memorandum of understanding set up by the External Collaborators Committee that specifies authorship and publication policies for that work.  These should be as compatible as possible with the respective Collaboration policies.  Projects may add individual external collaborators to the team provided that no unreleased data is provided to them.
+Once recorded, the Collaboration may not re-classify a non-key project as key (or vice versa) without the written agreement of all named project team members.  
 
 Project teams have the responsibility to carry projects to completion and publication.  The Publication Board will query the working group coordinators twice yearly for progress reports on all projects, and forward the results to the Science Council.  Any projects without progress for one year will be noted as ``inactive'' and will be dropped from the database if there is still no progress at the next review.
 
 \subsection{Authorship}
 %\Comment{[Ed. note: Aside from the concept of ``Key science'' vs ``standard papers,'' the main dispute in this section relates to opt-in/opt-out as the default, or whether a weak opt-in is any better than an opt-out.]}
 
-For the purposes of authorship, ``active members'' consist of Senior, Postdoctoral, and Graduate members of the Collaboration as defined in the membership council bylaws.  Provisional member may appear on papers to which they actively contribute.  The three types of projects differ in their authorship rules.
+For the purposes of authorship, ``active members'' consist of Senior, Postdoctoral, and Graduate members of the Collaboration as defined in the membership council bylaws.  Provisional Members and external collaborators may appear as authors on papers when they are part of the project team.
+
 
 \begin{enumerate}
 \item For Key papers, all active members of the Collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical.  The project team will designate a small number of corresponding authors to signify those most involved with the work.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
@@ -552,7 +556,7 @@ For the purposes of authorship, ``active members'' consist of Senior, Postdoctor
   \item For other forecasts and technical reports, the author list will consist of the project team only, plus any Collaboration members that contributed to the study, as determined by the project team and appropriate working group coordinators, unless those author opt out.  The author list should be ordered according to the preference of the project team, followed by ``for the CMB-S4 Collaboration.''  For conference proceedings, the author list may be the single person who presented.
 \end{enumerate}
 
-
+In rare cases, a Senior Member may recommend authorship for an undergraduate student, graduate student, engineer or technician who is not a Collaboration member.  The Senior Member must petition the project team and the appropriate Working Group coordinators with a written description of the critical work done by the suggested author. 
 Any disputes regarding authorship will be resolved by the Publication Board with the Spokespersons providing  tie-breaking votes if necessary.  If an eligible member is unable to opt in, due to an unforeseen circumstance, the Publication Board may add them to the author list.
 
 \subsection{Collaboration Review and Paper Submission Process}
