postdoc member on GB

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -138,9 +138,9 @@ This may include promotion of short term sub-committees established by the co-sp
 % moved the following to the start of the Scope section:  \textit{Any powers not explicitly assigned to a different governing body in these bylaws reside in the Governing Board}. 
 
 \subsection{Board Representation}
-The GB is composed of 17 members. The Spokespersons and other members of the \exec\ may not serve on the GB.  
-The length of a term of service for a Governing Board member is two years; members are allowed to serve at most two terms consecutively.
-To ensure that the board is truly ``\textbf{representative}'' of the Collaboration, prior to each GB election,  the GB and the Spokespersons (or the ICCC for the first election) will particularly encourage suitable candidates from a broad range of 
+The GB is composed of 19 members, 18 drawn from the Senior Members of the Collaboration and one drawn from the Postdoctoral Members (see \S\ref{sec:memtypes}). The Spokespersons and other members of the \exec\ may not serve on the GB.  
+The length of a term of service for a Governing Board member is two years for Senior Members and one year for the Postdoctoral Member; members are allowed to serve at most two terms consecutively.
+To ensure that the board is truly representative of the Collaboration, prior to each GB election,  the GB and the Spokespersons (or the ICCC for the first election) will particularly encourage suitable candidates from a broad range of 
 backgrounds to self-nominate  for GB membership.  Further details on the election of GB members is provided in  \S\ref{sec:gb-elections}.  
 
 %To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to the election the GB---or the ICCC for first election---will define various categories of representation it is deemed important to include on the GB (possibly including e.g., ``Tenure Track" early career scientists,  historically underrepresented groups, partner countries with significant membership, members of small institutions, \textcolor{red}{representatives of existing CMB programs}, etc). Both the GB and spokespersons---or the ICCC for first election---should particularly encourage suitable candidates in each of these categories to self-nominate for GB  membership.
@@ -159,17 +159,18 @@ The secretary of the GB is chosen informally by the GB chair to serve during the
 
 
 \subsection{Governing Board Meetings}
-The first Governing Board will establish rules for its meetings after electing its chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every Collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request of another GB member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB can invite other observers at its discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
+The first Governing Board will establish rules for its meetings after electing its chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every Collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request of another GB member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
 GB votes can be held by email or other online method. Summaries of the GB meetings are distributed to the full Collaboration by the GB chair or GB secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB members.
 results of any votes taken.
- It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two-year term.  
+ It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate %(via meeting attendance or email) 
+ in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two-year term.  
 
 \subsection{Election and Voting Commission}
-The GB appoints the chair and two additional members of the Election and Voting Commission (EVC).  The EVC is charged with conducting elections as spelled out in \S\ref{sec:elections}. The EVC acts \textbf{independently} of the GB, but any points of substantive disagreement amongst the members should be referred back to the GB.  Commission members serve two-year terms ordinarily.  However, the GB may choose to extend the first term of the chair to  three years, to allow staggering of the membership for improved continuity between commissions.   Commission members may be removed with a supermajority vote of the GB.
+The GB appoints the chair and two additional members of the Election and Voting Commission (EVC).  The EVC is charged with conducting elections as spelled out in \S\ref{sec:elections}. The EVC acts independently of the GB, but any points of substantive disagreement amongst the members should be referred back to the GB.  Commission members serve two-year terms ordinarily.  However, the GB may choose to extend the first term of the chair to  three years, to allow staggering of the membership for improved continuity between commissions.   Commission members may be removed with a supermajority vote of the GB.
  % , with the exception of the chair who will serve a three-year term at the start of the collaboration (the chair position is a 2 year term thereafter) to enable a continuity between commissions. There are no term limits for this commission. 
  
  \subsection{Removal of Members  from Leadership Roles}
- The GB must inform the Collaboration of its decision to remove a member from a leadership role within one working date after the vote to remove.  In the event of a removal of someone from an elected position, the GB may either hold a special election to fill the open position quickly, or wait until the next election cycle.  
+ The GB must inform the Collaboration of its decision to remove a member from a leadership role within one working date after the vote to remove.  In the event of a removal of someone from an elected or appointed position, the GB may make an off cycle appointment or hold a special election to fill the open position quickly, or wait until the next election cycle.  
 % A two-week collaboration-wide notice is required for a vote for removal and such a vote will be taken if at least half the GB members support such a proposal to the chair. After the vote is taken the record of the vote (e.g., who voted and how) will be made available to the collaboration. In the event of a removal, the open position(s) will be filled following the procedures in these bylaws.
  
  
@@ -251,7 +252,7 @@ in a majority of meetings over a one year period will be replaced in the nearest
 
 
 \section{Elections}\label{sec:elections}
-All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Most positions have term limits.  Elections for leadership roles are  arranged so that $\sim 50\%$ of the members in each body will be up for election each year.  As described in Appendix~\ref{app:first_election}, roughly half the initial terms will be for three years to allow for staggered terms to improve continuity.  Figure~\ref{fig:elect_cycle} displays the staggered terms schematically.  New appointments take office on July 1 in the year of their election.  
+All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms (with the exception of the Postdoctoral Member on the GB, who serves a one-year term). Most positions have term limits.  Elections for leadership roles are  arranged so that $\sim 50\%$ of the members in each body will be up for election each year.  As described in Appendix~\ref{app:first_election}, roughly half the initial terms will be for three years to allow for staggered terms to improve continuity.  Figure~\ref{fig:elect_cycle} displays the staggered terms schematically.  New appointments take office on July 1 in the year of their election.  
 
 %In this section of the bylaws the process and timing for each major election is described.  
 %Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
@@ -309,8 +310,10 @@ If no candidate agrees to stand for election, the terminating chair will continu
 
 \subsection{Governing Board Elections }
 \label{sec:gb-elections}
-The GB members are elected to two-year terms.  All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions. 
 
+The 18 GB members drawn Senior Members of the Collaboration are elected to two-year terms.  All Senior Members may  run for these positions. The one GB member drawn from the Postdoctoral Members of the Collaboration is elected for a one-year term.
+
+The election for the Senior Members on the GB proceeds as follows. 
 Prior to the election, Voting Members are asked to nominate individuals for the GB to the EVC.   Self-nominations are accepted. After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
 Each Voting Member votes for a single candidate for each vacant GB position.  % In the event of a tie for the last open position, a runoff election will be held between the two candidates that have the same number of votes. 
 
@@ -319,6 +322,8 @@ Each Voting Member votes for a single candidate for each vacant GB position.  % 
 %Electors vote via email, with the votes tabulated by the EVC members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). 
 %Each Voting Member may vote for up to 10 candidates, or fewer as mandated by the EVC.
 % of the total number of board members. 
+
+The election for the Postdoctoral Member of the GB follows the same procedure, with the exception that only Postdoctoral Members are eligible to vote. 
 
 After the initial GB is established, it is to amend these bylaws to establish whether to have separate votes different categories of representation on the GB or to continue with a mixed election/appointed governing board model as described in Appendix~\ref{app:first_election}. It is the expectation that the GB be evolve to a fully elected body as the Collaboration matures.
 
